--- a/trunk/Documentation/LaTex/informe.tex
+++ b/trunk/Documentation/LaTex/informe.tex
@@ -7,17 +7,11 @@
 \title{TP0 Organización de las Computadoras (66.20)}
 \author{
   Rodriguez Genaro, Leandro	Padrón: 92098\\
-  Reale, Tomas			Padrón: .....\\
+  Reale, Tomás			Padrón: 92255\\
   Piechotka, Federico		Padrón: 92216}
 \date{Fecha: 29/03/2012}
 
 \maketitle
-
-\begin{tabular}{ l l }
-  Rodriguez Genaro, Leandro & Padrón: 92098 \\
-  Reale, Tomas & Padrón: ..... \\
-  Piechotka, Federico & Padrón: 92216 \\
-\end{tabular}
 
 
 
