--- a/trunk/Documentation/LaTex/preba.tex
+++ b/trunk/Documentation/LaTex/preba.tex
@@ -48,10 +48,11 @@ Facultad de Ingeniería, Universidad de Buenos Aires       \\
   \texttt{leandrorodriguezg@yahoo.com.ar} \\
   \hline
   Reale, Tomás & \textit{Padrón Nro. 92.255} \\
-  \texttt{loquesea@yahoo.com.ar} \\
+  \texttt{tomasreale@gmail.com} \\
   \hline
   Piechotka, Federico & \textit{Padrón Nro. 92.216} \\
-  \texttt{loquesea@yahoo.com.ar} \\
+  \texttt{$error si pones el guion bajo de f piecho@hotmail.com$} \\
+  \hline
 \end{tabular}}
 \end{flushleft}
 
