--- a/trunk/Documentation/LaTex/preba.tex
+++ b/trunk/Documentation/LaTex/preba.tex
@@ -51,7 +51,7 @@ Facultad de Ingeniería, Universidad de Buenos Aires       \\
   \texttt{tomasreale@gmail.com} \\
   \hline
   Piechotka, Federico & \textit{Padrón Nro. 92.216} \\
-  \texttt{$error si pones el guion bajo de f piecho@hotmail.com$} \\
+  \texttt{f\_piecho@hotmail.com} \\
   \hline
 \end{tabular}}
 \end{flushleft}
