--- a/Documentation/LaTex/informe.tex
+++ b/Documentation/LaTex/informe.tex
@@ -61,7 +61,8 @@ Facultad de Ingeniería, Universidad de Buenos Aires       \\
 
 % Quita el número en la primer página.
 \thispagestyle{empty}
-
+\newpage
+\tableofcontents
 \newpage
 
 \begin{abstract}
@@ -91,6 +92,8 @@ Es de complejidad $O(n*log(n))$,ya sea para el mejor caso, el peor caso, o el ca
 El ordenamiento por selección (Selection Sort en inglés) es un algoritmo de ordenamiento que requiere $O(n^2)$ operaciones para ordenar una lista de n elementos.
 Su complejidad no varia para el mejor, el peor, o el caso promedio.
 
+\newpage
+
 \section{Desarrollo}
 \subsection{Mediciones de tiempo}
 Siguiendo las instrucciones del tp,se crearon varios archivos de caracteres aleatorios, 
@@ -100,25 +103,56 @@ Una se dejo tal cual fue creada.Otra se ordeno de menor a mayor.Otra se ordeno d
 Con esas copias, se procedio a construir tablas del tiempo medido en funcion del tamaño, para cada uno
 de los algoritmos de ordenamiento.
 A continuacion mostramos los graficos obtenidos.
-Esto se ejecutando el programa ya compilado, usando la funcion time de la consola de Ubuntu.
+Los datos se consiguieron ejecutando el programa para todos los distintos archivos,con los 2 metodos
+,usando la funcion time de la consola de Ubuntu para registrar los tiempos.
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/MergeSortVectorRandom.PNG}
+\end{center}
+\end{figure} 
 
-\begin{figure}[p]
-  \centering
- \includegraphics[width=13cm]{Imagenes/MergeSortVectorRandom.PNG}
-  \caption{Selection sort: Tiempo insumido Vs. $100*2^N$ en vector random}
-  \label{fig:seleccion:ord}
-\end{figure}
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/SelectionSortVectorRandom.PNG}
+\end{center}
+\end{figure} 
+
+\newpage
+
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/MergeSortOrdenadodecreciente.PNG}
+\end{center}
+\end{figure} 
+
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/SelectionSortOrdenadodecreciente.PNG}
+\end{center}
+\end{figure} 
+
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/MergeSortOrdenadocreciente.PNG}
+\end{center}
+\end{figure} 
+
+\begin{figure}[!htp]
+\begin{center}
+\includegraphics[width=13cm]{Imagenes/SelectionSortordenadocreciente.PNG}
+\end{center}
+\end{figure} 
+
+\newpage
 
 
 \subsection{Analisis de las mediciones de tiempo}
-Es facil ver que se verifica lo que se esperaba : que los 2 metodos de ordenamiento mantienen su orden de complejidad independientemente
-de como se encuentra el vector.
-
-\subsection{Resultados}
-Una subseccion de la parte principal. Ponele que aca van los resultados de las pruebas
-
-\subsubsection{Alguna otra cosa}
-Una sub subseccion. Mas info.
+Es fácil ver que se verifica lo que se esperaba : que los 2 métodos de ordenamiento mantienen su orden de complejidad independientemente
+de como se encuentra el vector. Es fácil observar también que el Merge Sort es muchísimo mas rápido que el Selection Sort.
+Cuando N tiende a números grandes, fue imposible medir el tiempo para terminar de ordenar un vector con Selection Sort, se detuvo la medición al pasar mas de 10 minutos. Para N chicos, los 2 métodos son similares.
+Usando estos valores, se consiguieron los Speed Up de Merge Sort vs Selection Sort.
+Vale mencionar algunas cosas. Para N chicos, donde los tiempos de ambos métodos son 0 o casi 0, se considera el Speed Up nulo, indicando que los 2 métodos tardaron lo mismo.
+$SpeedUpMs=TiempoMergeSort/TiempoSelectionSort$
 
 
 \begin{thebibliography}{9}
